# fantasy-mapbuilder

./: Cargo.toml  tauri.conf.json
Projects/test/: map-0.json  map-1.json  map-2.json  map-3.json  marker-1.json  marker-2.json  marker-3.json
src/: main.rs
src/common/: project_state.rs
src/ggez_gui/: camera.rs  config.rs  main.rs  position.rs  text.rs
src/slint_gui/ui/: ui.slint
src/tauri_gui/: main.rs
src/tauri_gui/ui/: change_map.js  index.html  informatic_manager.js
