[package]
name = "fantasy-mapbuilder"
build = "src/slint_gui/build/build.rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "common"
path = "src/common/lib.rs"

[[bin]]
name = "slint_gui"
path = "src/slint_gui/main.rs"

[[bin]]
name = "ggez_gui"
path = "src/ggez_gui/main.rs"

[dependencies]
ggez = "0.9.3"
itertools = "0.13.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0"
slint = "1.6.0"

[build-dependencies]
slint-build = "1.5.0"
