[package]
name = "fantasy-mapbuilder"
build = "src/slint_gui/build/build.rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "common"
path = "src/common/lib.rs"

[[bin]]
name = "slint_gui"
path = "src/slint_gui/main.rs"

[[bin]]
name = "ggez_gui"
path = "src/ggez_gui/main.rs"

[[bin]]
name = "tauri_gui"
path = "src/tauri_gui/main.rs"

[dependencies]
ggez = "0.9.3"
itertools = "0.13.0"
rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0"
slint = "1.6.0"
tauri = { version = "1.6.4" }
comrak = "0.24"

[build-dependencies]
slint-build = "1.5.0"
tauri-build = { version = "1.5.2" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]